@@ -5,6 +5,8 @@ from Products.FileSystemSite.DirectoryView import registerDirectory, \
 from Products.FileSystemSite.FSImage import FSImage
 from Products.FileSystemSite.DirectoryView import manage_addDirectoryView
 from Products.FileSystemSite.utils import minimalpath, expandpath
+from Products.FileSystemSite.FSDTMLMethod import FSDTMLMethod
+from Products.FileSystemSite.FSPageTemplate import FSPageTemplate
     
 # can enable this to make it work with CMFCore instead of FileSystemSite
 # except some freakish behavior if you install both (and install/uninstall
@@ -15,3 +17,5 @@ from Products.FileSystemSite.utils import minimalpath, expandpath
 ##     from Products.CMFCore.FSImage import FSImage
 ##     from Products.CMFCore.DirectoryView import manage_addDirectoryView
 ##     from Products.CMFCore.utils import minimalpath, expandpath
+##     from Products.CMFCore.FSDTMLMethod import FSDTMLMethod
+##     from Products.CMFCore.FSPageTemplate import FSPageTemplate
